Fixed js code, added partials

--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
         </div>   <!-- /.samples -->     
 
     </div> <!-- /.main --> 
-
+    
+    <div class="faq">
+        <div class="q">WHY?</div>
+        <div class="a">This little tool was made in the need of replacing the standart file choosers with crossbrowser customizable ones.</div>
+        <div class="q">HOW?</div>
+        <div class="a">Just press the code button, copy to clipboard the needed code. Or click <a href="https://github.com/beaverden/input-type/partials">here</a> to see the code for every part.</div>
+    </div>
 
     <script>
         var FileSelectCustom = {
