Fixed copy-link effect on the link to github click

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div id="html1" class="copy-link active">HTML</div>
                     <div id="css1" class="copy-link">CSS</div>
                     <div id="js1" class="copy-link">JS</div>
-                    <div class="copy-link">
+                    <div>
                         <a href="https://github.com/beaverden/input-type/tree/master/partials" target="_blank">
                             <i class="fa fa-code"></i>
                         </a>
@@ -112,7 +112,7 @@
                     <div id="html2" class="copy-link active">HTML</div>
                     <div id="css2" class="copy-link">CSS</div>
                     <div id="js2" class="copy-link">JS</div>
-                    <div class="copy-link">
+                    <div>
                         <a href="https://github.com/beaverden/input-type/tree/master/partials" target="_blank">
                             <i class="fa fa-code"></i>
                         </a>
@@ -140,7 +140,7 @@
                 <div id="header3" class="code-header" style="display: none; opacity: 0.0; ">
                     <div id="html3" class="copy-link active">HTML</div>
                     <div id="css3" class="copy-link">CSS</div>
-                    <div class="copy-link">
+                    <div>
                         <a href="https://github.com/beaverden/input-type/tree/master/partials" target="_blank">
                             <i class="fa fa-code"></i>
                         </a>
