--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
+    <link rel="icon" href="/favicon.ico?v=2" />
     <title>beaverden | INPUT[TYPE]</title>
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
